# disk-dabble

./: CMakeLists.txt  README.md  config.h.in  imgui.ini
cmake/: Dependencies.cmake
include/: app.hpp  bookmarkservice.h  opendocument.h  openfindwidget.h  openfolderwidget.h  openimagewidget.h  opentextwidget.h  serviceprovider.h  settingsservice.h
src/: app-infra.cpp  app.cpp  bookmarkservice.cpp  opendocument.cpp  openfindwidget.cpp  openfolderwidget.cpp  openimagewidget.cpp  opentextwidget.cpp  pagesdocument.cpp  pagesdocument.h  serviceprovider.cpp  settingsservice.cpp
